# sentio

./: .env.example  .gitignore  .importlinter  .mailmap  .pr_body_d150d.md  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITIC_BACKLOG.md  DAILY_UPDATE_INTEGRATION_SUMMARY.md  FEATURE_INDEX.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MACRO_SIGNALS_IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR_BOOT.md  ORCHESTRATOR_BOOT_DEPRECATED.md  OS_STATE.md  README.md  SPEC.md  TRADING_DECISIONS_AND_API.md  WORKFLOW.md  anlıklar.md  builderAPIsonrapor.md  chat.html  config.yaml  efficiency_checkup_2026-05-13.md  masterplan.md  orch.md  positions.yaml.example  pyproject.toml  pytest.ini  requirements.txt  server.py  test_api.py  vader_accuracy_results.txt
.claude/: settings.local.json
.efficiency/: efficiency_snapshot.md  masterplan_snapshot.md  spec_ctx_1_completion.md  spec_kap_2_completion.md  spec_smart_money_1_completion.md  tasks_open.md
.github/: PULL_REQUEST_TEMPLATE.md
agents/: analyst_chat.py  architect_chat.py  auditor_chat.py  critic_chat.py  efficiency_chat.py  efficiency_tracker.py  orchestrator.py  orchestrator_chat.py
data/: macro_sensitivity.json  news_cache.json  sector_mapping.json  sentiment_cache.json
decisions/: decisions_2026-05-13.md
docs/: ARCHITECTURE.md  ARCHITECTURE_ESKI_V1.2.md  ARCH_V2_PARADIGM_DECISION.md  AUDIT_REPORT_001.md  BOOT_ARCHITECT.md  BOOT_BUILDER.md  BOOT_ORCHESTRATOR.md  BOOT_STRATEGIST.md  CLAUDE_DECISIONS_INTEGRATION.md  CODEBASE_INVENTORY_v2.md  DATA_HUB.md  DATA_STORE_LAYOUT.md  DECISIONS.md  DEPENDENCY_MAP.md  EDGE-EPISTEMOLOGY-AND-NEGATIVE-KNOWLEDGE-SYNTHESIS.md  GAP_ANALYSIS_2026-05-15.md  OS_STATE.md  PIVOT_ARCHITECTURE_AUDIT.md  PRE_COMMIT_SETUP.md  RESEARCH_REGISTRY.md  RUNBOOK.md  SIGNAL_ALERT_USAGE.md  YOL2_REUSABLE_MAP.md
schema/: graveyard_entry.schema.json
scripts/: analyze_audit_trail.py  analyze_trade_distribution.py  arch_health_check.ps1  archive_datastore.py  backfill_macro_feed.py  backtest_signals.py  backtest_with_sentiment.py  backup_db.py  build_clean_universe.py  build_clean_universe_fundamentals.py  build_viop_signal_panel.py  calculate_real_alpha.py  capture_datastore_session.py  check_public_hygiene.py  d189_edge_isolation.py  d189_param_diagnosis.py  daily_update.py  download_viop_3208.py  event_forward_capture.py  fetch_foreign_flow.py  get_test_summary.py  health_check.py  load_datastore_xls.py  macro_data_example.py  macro_signals_example.py  phase_4_2_1_validation.py  pytest_affected.py  register_event_capture_task.ps1  retract_old_backtest_reports.py  run_backtest.py  run_baseline_backtests.py  run_d050_bear_test.py  run_exploratory_backtest.py  run_k2_factor_tilt.py  run_k3_backtest.py  run_value_only_regime.py  run_viop_k2_harness.py  scrape_kap_data.py  scrape_takas.py  setup_cloud.md  (+5 more)
tests/: conftest.py  test_architecture.py  test_backtest.py  test_backtest_bist_scalar.py  test_backtest_gate.py  test_backtest_metrics.py  test_backtest_production_parity.py  test_backtest_real_return.py  test_backtest_statistical.py  test_baseline_markers.py  test_bist_fetch.py  test_bist_trend_scalar.py  test_brent_energy_integration.py  test_brinson.py  test_cds_fallback.py  test_cds_fetch.py  test_cds_percentile.py  test_claude_haiku_analyzer.py  test_critic_backlog.py  (+126 more)
(+640 files in other folders)
