[project]
name = "bist-trading-system"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true

[tool.ruff]
line-length = 100            # was 88 (D-117 user request)
target-version = "py311"
exclude = ["scripts/", "agents/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
