[project]
name = "sentio"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Behaviour-neutral relaxations (D-121):
#  - implicit_optional: legacy `def f(x: str = None)` style yaygın; runtime'a etkisiz.
#  - import-untyped: requests/yaml gibi 3rd-party stub'ları CI'da kurulu değil (env gürültüsü).
#  - warn_return_any KALDIRILDI (D-117'de eklenmişti): untyped pandas/requests/json
#    sınırlarında 31 "no-any-return" gürültüsü üretti, 0 gerçek bug; pragmatik kapatıldı.
implicit_optional = true
disable_error_code = ["import-untyped"]

# --- D-121 mypy baseline ---
# Mevcut (pre-existing) tip hatalarına sahip modüller. Çoğu untyped DIŞ VERİ
# sınırı: anthropic SDK (strategist), playwright (fintables), requests/scraper'lar,
# SMTP env (failure_notifier), pandas analytics. Davranış DEĞİŞMEZ — yeni kodun
# temiz kalması için bunlar baseline'landı, ileride kademeli ödenecek teknik borç.
# Sinyal modüllerine (macro_layer/macro_signals) müdahale PROJECT_GUIDE.md gereği riskli
# olduğundan kod düzenlemek yerine ignore tercih edildi.
[[tool.mypy.overrides]]
module = [
    "src.signals.strategist",
    "src.data.smart_money_client",
    "src.data.macro_feed",
    "src.data.fintables_scraper",
    "src.scrapers.kap_scraper",
    "src.analytics.brinson_attribution",
    "src.utils.failure_notifier",
    "src.data.signal_logger",
    "src.data.macro_scheduler",
    "src.data.kap_scraper",
    "src.signals.layers.macro_layer",
    "src.signals.layers.connectors.bist_datastore_connector",
    "src.risk.portfolio_heat",
    "src.reporting.ic_dashboard",
    "src.data.macro",
    "src.signals.macro_signals",
    "src.risk.drawdown",
    "src.data.fetcher",
]
ignore_errors = true

# RR-Y1-005 validation engine (Yol-1 infra, DEC-045): anti-slop -- the infra
# itself must be typed. Force annotations on every def under src/engine/.
[[tool.mypy.overrides]]
module = ["src.engine.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 100            # was 88 (D-117 user request)
target-version = "py311"
exclude = ["scripts/", "agents/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
